--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@babel/preset-env": "^7.19.4",
     "babel-jest": "^29.2.2",
     "jest": "^29.2.2"
+  },
+  "dependencies": {
+    "@types/jest": "^29.2.0"
   }
 }
